--- a/index.html
+++ b/index.html
@@ -1,1 +1,237 @@
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/572515242186340.jpg">
+    <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/572515242186340.jpg" type="image/jpg">
+    
+    <title>Aluguel de Imóvel para Carnaval</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
 
+        body {
+            background: black;
+            color: white;
+            text-align: center;
+            padding-top: 60px;
+        }
+
+        header {
+            background: #ffcc00;
+            padding: 15px;
+            text-align: center;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        header a {
+            text-decoration: none;
+            color: #333;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .container {
+            margin-top: 70px;
+        }
+
+        .main-image {
+            margin-top: 1px;
+            width: 100%;
+            height: 800%;
+            border-radius: 10px;
+        }
+
+        .btn {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background: green;
+            color: white;
+            border: none;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+
+        footer {
+            background: #222;
+            color: white;
+            padding: 10px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+
+        /* Estilos do Modal */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 15% auto;
+            padding: 20px;
+            width: 80%;
+            max-width: 500px;
+            text-align: center;
+            border-radius: 10px;
+        }
+
+        .close {
+            float: right;
+            cursor: pointer;
+            font-size: 20px;
+        }
+
+        .gallery img {
+            width: 100px;
+            height: 100px;
+            margin: 5px;
+            border-radius: 5px;
+        }
+
+        iframe {
+            width: 100%;
+            height: 300px;
+            border: 0;
+        }
+
+        .menu {
+            display: none;
+            margin: 10px;
+            text-align: center;
+        }
+
+        .menu.active {
+            display: block;
+        }
+
+        .menu a {
+            display: inline;
+            gap:20px;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+            font-size: 18px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .menu a:hover {
+            background-color: #f0f0f0;
+        }
+        .imgpq{
+              width:30%;
+              height:100px;
+              border:1px solid red;
+        }
+        .tracinho{
+              color:black;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Header -->
+    <header>
+        <div class="tracinho" onclick="casa()">&#9776;</div>
+        <span id="menu" class="menu">
+            <a href="javascript:void(0);" onclick="openModal('modalContato')">Contato</a>
+            <a href="javascript:void(0);" onclick="openModal('modalGaleria')">Galeria</a>
+            <a href="javascript:void(0);" onclick="openModal('modalGPS')">GPS</a>
+        </span>
+    </header>
+
+    <!-- Conteúdo principal -->
+    <div class="container">
+        <img src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/572515242186340.jpg" class="main-image" alt="Imagem do imóvel">
+    </div><br>
+    <img class="imgpq" src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/IMG-20250203-WA0003.jpg">
+    <img class="imgpq" src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/IMG-20250203-WA0007.jpg">
+    <img class="imgpq" src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/IMG-20250203-WA0009.jpg">
+          <label>Area externa : coberta</label><br>
+          <label>lagura : 2 metro</label><br>
+          <label>comprimento : 2 metro</label>
+
+    <!-- Modal Contato -->
+    <div id="modalContato" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modalContato')">&times;</span>
+            <h2>Contato</h2>
+            <a href="https://wa.me/+5571992290058" class="btn">WhatsApp</a>
+        </div>
+    </div>
+
+    <!-- Modal Galeria -->
+    <div id="modalGaleria" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modalGaleria')">&times;</span>
+            <h2>Galeria</h2>
+            <div class="gallery">
+                  <img src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/572515242186340.jpg" alt="Imagem 4"><br>
+                <img src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/IMG-20250203-WA0003.jpg" alt="Imagem 1">
+                <img src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/IMG-20250203-WA0009.jpg" alt="Imagem 2">
+                <img src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/IMG-20250203-WA0007.jpg" alt="Imagem 3">
+                <img src="https://raw.githubusercontent.com/SuaSortehoje/AlugueAqui/refs/heads/main/IMG-20250203-WA0006.jpg" alt="Imagem 4">
+                
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal GPS -->
+    <div id="modalGPS" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modalGPS')">&times;</span>
+            <h2>Localização</h2>
+            <p>Rua Nova do Calabar, 77</p>
+            <iframe src="https://www.google.com/maps?q=Rua+Nova+do+Calabar+77&output=embed"></iframe>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        Produzido pela NewTech
+    </footer>
+
+    <script>
+        function openModal(id) {
+            document.getElementById(id).style.display = "block";
+        }
+
+        function closeModal(id) {
+            document.getElementById(id).style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target.classList.contains('modal')) {
+                event.target.style.display = "none";
+            }
+        }
+
+        function casa() {
+            document.getElementById("menu").classList.toggle("active");
+        }
+    </script>
+
+</body>
+</html>
